Fix installers vertical align

--- a/common_static/css/lutris.less
+++ b/common_static/css/lutris.less
@@ -809,6 +809,9 @@ form {
     .clearfix;
     padding: 14px 7px;
     border-bottom: 1px solid #444;
+    .centering {
+      height: 33px;
+    }
   }
   .installer-unpublished {
     border-left: 2px solid #700;
